src/snapshots/afrotd__parser__tests__interpretation_8.2.1_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 2
  - 1
index: 3
text: "Der in der Luft befindliche Ballträger A21 überquert fliegend die\nSeitenlinie. Der Ball in seiner Hand überquert über der B-1 die Seitenlinie. Die Bewegung setzt sich jenseits des Pylons fort und der Ball wird\nim Besitz von A21 im Aus für dead erklärt."
ruling: "Der Ball wird an\nder B-1 für „im Aus“ erklärt (Regeln 2.12.1 und 4.2.4.d)."
