src/snapshots/afrotd__parser__tests__interpretation_8.2.1_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 2
  - 1
index: 5
text: "Ballträger A22 springt von der B-1 seitlich in Richtung Goalline.\nDer Ball, der sich in seinem Besitz befindet, (a) berührt den Pylon; (b)\nüberquert den Pylon oberhalb oder (c) überquert die Goalline innerhalb\ndes Pylons. A22 berührt danach erst drei Meter jenseits der Goalline\nden Boden im Aus."
ruling: "(a), (b) und (c) In allen drei Fällen wird\nein Touchdown erzielt. Der Ball, der sich A22’s Besitz befindet, hat die\nFläche der Goalline in allen drei Fällen durchbrochen."
