src/snapshots/afrotd__parser__tests__interpretation_8.2.1_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 2
  - 1
index: 6
text: "Ballträger A22 stürmt in Richtung des rechten Pylon auf B’s\nGoalline. von der B-2 hechtet er vorwärts oder wird von einem Gegner\nvorwärts geblockt, so dass er keinen Bodenkontakt mehr hat. Der Ball\nin A22’s rechter Hand überquert an der B-1 die Seitenlinie und passiert\nden Pylon außerhalb. Danach berührt A22 (a) den Pylon mit seinem\nFuß oder seiner linken Hand; (b) erst drei Meter jenseits der Goalline\nden Boden im Aus."
ruling: "(a) Touchdown. Die Fläche der Goalline wird verlängert, da A22 den Pylon berührt. (b) Kein Touchdown.\nDie Fläche der Goalline wird nicht verlängert, da A22 weder den Pylon\nnoch den Boden in der Endzone berührte. Der Ball wird an der B-1 für\n„im Aus“ erklärt."
