src/snapshots/afrotd__parser__tests__interpretation_8.2.1_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 2
  - 1
index: 8
text: "Ballträger A22 stürmt in Richtung des rechten Pylon auf B’s\nGoalline. Er hat den Ball in seiner rechten Hand. Sein Fuß berührt den\nPylon, unmittelbar bevor der Ball (a) den Pylon überquert (b) die Verlängerung der Goalline zur Rechten (außerhalb) des Pylon überquert."
ruling: "(a) und (b) Kein Touchdown in beiden Fällen. Da der Pylon\nsich im Aus befindet, wird der Ball dead, als A22 den Pylon berührt. Daher ist der Ball in beiden Fällen dead, bevor er die Goalline überqueren\nkann."
