src/snapshots/afrotd__parser__tests__interpretation_8.3.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 1
index: 1
text: "Während eines Try fumbelt Team B, nachdem es in Ballbesitz\ngelangt ist, und Team A recovert den Ball in Team B’s Endzone."
ruling: "Team B kann fumbeln, nachdem es einen Pass abgefangen hat,\neinen Kick gefangen oder recovert hat oder einen Fumble oder einen\nRückpass gefangen oder recovert hat. Touchdown. Team A erhält zwei\nPunkte (Regel 8.3.2.d.1)."
