src/snapshots/afrotd__parser__tests__interpretation_8.3.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 2
text: Bei einem Try kickt B2 einen Team A-Fumble in Team B’s Endzone hinein. Der Fumble wird dort von Team B recovert.
ruling: "Safety, ein Punkt für Team A oder Team A kann die Strafe für das illegale Kicken vom Basic Spot annehmen (Regeln 8.3.1 und 8.3.3.b.1) und\nden Down wiederholen."
