src/snapshots/afrotd__parser__tests__interpretation_8.3.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 3
text: "Bei einem Ein-Punkt-Try blockt B2 den Kick von A1 und der Ball,\nder nicht die neutrale Zone überquerte, wird von A2 hinter der neutralen\nZone recovert und über Team B’s Goalline advanct."
ruling: "Team A\nerhält zwei Punkte zuerkannt (Regel 8.3.1)."
